--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -89,7 +89,7 @@ body{ background: #000; }
 	width: 100%;
 	height: 100%;
 	min-height: 665px;
-	background: url(../image/fondo.jpg);
+	background: url(https://drive.google.com/file/d/10fOUDjmdUlld13pBazG_es7NUzP_-OkK/view?usp=share_link);
 	background-repeat: no-repeat;
 	background-size: 200% 100%;
 	overflow: hidden;
