--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -89,7 +89,7 @@ body{ background: #000; }
 	width: 100%;
 	height: 100%;
 	min-height: 665px;
-	background: url(https://drive.google.com/file/d/10fOUDjmdUlld13pBazG_es7NUzP_-OkK/view?usp=share_link);
+	background: url(https://i.imgur.com/iQGnIWq.jpg);
 	background-repeat: no-repeat;
 	background-size: 200% 100%;
 	overflow: hidden;
@@ -617,7 +617,7 @@ textarea:required:valid + label{
 
 	/*** HEADER ***/
 	.header{
-		background: url(https://drive.google.com/file/d/10fOUDjmdUlld13pBazG_es7NUzP_-OkK/view?usp=share_link.jpg);
+		background: url(https://i.imgur.com/iQGnIWq.jpg);
 		background-repeat: no-repeat;
 		background-size: 150% 100%;
 	}
@@ -627,7 +627,7 @@ textarea:required:valid + label{
 	
 	/*** HEADER ***/
 	.header{
-		background: url(https://drive.google.com/file/d/10fOUDjmdUlld13pBazG_es7NUzP_-OkK/view?usp=share_link);
+		background: url(https://i.imgur.com/iQGnIWq.jpg);
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 	}
