--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,9 +21,17 @@ body{ background: #000; }
 
 
 /*----------------------------- FUENTES -----------------------------*/
+
+@import url(//db.onlinewebfonts.com/c/4124a6204d35abaf22db32c19d62d73e?family=Insaniburger);
+
 @font-face {
-	font-family: 'Insaniburger';
-	src: url('../fonts/Insaniburger/Insanibc.ttf');
+	font-family: "Insaniburger"; 
+	src: url("//db.onlinewebfonts.com/t/4124a6204d35abaf22db32c19d62d73e.eot"); 
+	src: url("//db.onlinewebfonts.com/t/4124a6204d35abaf22db32c19d62d73e.eot?#iefix") format("embedded-opentype"), 
+	     url("//db.onlinewebfonts.com/t/4124a6204d35abaf22db32c19d62d73e.woff2") format("woff2"), 
+	     url("//db.onlinewebfonts.com/t/4124a6204d35abaf22db32c19d62d73e.woff") format("woff"), 
+	     url("//db.onlinewebfonts.com/t/4124a6204d35abaf22db32c19d62d73e.ttf") format("truetype"),
+	     url("//db.onlinewebfonts.com/t/4124a6204d35abaf22db32c19d62d73e.svg#Insaniburger") format("svg"); 
 	font-weight: normal;
 	font-style: normal;
 }
