--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,7 @@
 *{
 	padding: 0;
 	margin: 0;
+	text-decoration: none;
 }
 
 html, body{
@@ -20,8 +21,27 @@ body{ background: #000; }
 
 
 
-/*----------------------------- FUENTES -----------------------------*/
+/*----------------------------- FUENTES (DESARROLLO) -----------------------------*/
+/*
+@font-face {
+	font-family: 'Insaniburger';
+	src: url('../fonts/Insaniburger/Insanibc.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
 
+@font-face {
+	font-family: 'CaveatBrush-Regular';
+	src: url('../fonts/Caveat_Brush/CaveatBrush-Regular.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+*/
+
+
+
+/*----------------------------- FUENTES (PRODUCCION) -----------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
 @import url(//db.onlinewebfonts.com/c/4124a6204d35abaf22db32c19d62d73e?family=Insaniburger);
 
 @font-face {
@@ -36,13 +56,6 @@ body{ background: #000; }
 	font-style: normal;
 }
 
-@font-face {
-	font-family: 'CaveatBrush-Regular';
-	src: url('../fonts/Caveat_Brush/CaveatBrush-Regular.ttf');
-	font-weight: normal;
-	font-style: normal;
-}
-
 
 
 /*----------------------------- ESTILOS PARA BOTONES -----------------------------*/
@@ -52,13 +65,18 @@ body{ background: #000; }
 	font-family: Insaniburger, serif;
 	letter-spacing: 0.5px;
 	background: none;
-	color: #fff;
 	padding: 10px 7px;
 	border-radius: 8px;
 	border: 3px solid #fff;
 	cursor: pointer;
 	text-shadow: -0.08em 0.03em 0.12em rgba(0, 0, 0, 0.9);
 	transition: .2s;
+}
+
+.button-header button a,
+.button-info button a,
+.button-form button a{
+	color: #fff;
 }
 
 .button-header button:hover,
@@ -97,7 +115,8 @@ body{ background: #000; }
 	width: 100%;
 	height: 100%;
 	min-height: 665px;
-	background: url(https://i.imgur.com/iQGnIWq.jpg);
+	/*background: url('../image/fondo.jpg');*/			/* PARA DESARROLLO */
+	background: url(https://i.imgur.com/iQGnIWq.jpg);		/* PARA PRODUCCIÓN */
 	background-repeat: no-repeat;
 	background-size: 200% 100%;
 	overflow: hidden;
@@ -130,7 +149,7 @@ body{ background: #000; }
 .header img{
 	position: absolute;
 	display: block;
-	bottom: -10px;
+	bottom: -20px;
 	left: 15%;
 	width: 70%;
 }
@@ -140,13 +159,14 @@ body{ background: #000; }
 /*----------------------------- ESTILOS PARA INFO -----------------------------*/
 .info{
 	padding: 60px 50px 40px 50px;
-	display: flex;
-	flex-direction: row;
 }
 
 .img-info{
 	display: none;
-	margin-right: 10%;
+	margin-right: 5%;
+	margin-bottom: 3%;
+	margin-top: 5%;
+	float: left;
 	position: relative;
 	border: 5px solid #f8ab05;
 	height: fit-content;
@@ -237,8 +257,15 @@ body{ background: #000; }
 .content-info p{
 	color: #fff;
 	text-align: justify;
-	font-family: 'Helvetica', sans-serif;
-	max-width: 610px;
+	margin: auto;
+	/*font-family: CaveatBrush-Regular, serif;*/		/* PARA DESARROLLO */
+	font-family: 'Caveat Brush', cursive;			/* PARA PRODUCCIÓN */
+	font-size: 2em;
+}
+
+.content-info p strong a{
+	color: #f8ab05;
+	text-decoration: none;
 }
 
 .button-info{
@@ -312,6 +339,7 @@ body{ background: #000; }
 .content-card p{
 	transition: ease 2.5s;
 	opacity: 0;
+	text-shadow: -0.08em 0.03em 0.12em #000;
 }
 
 .link-content-card{
@@ -605,14 +633,16 @@ textarea:required:valid + label{
 	.title-form h3:before{
 		content: '- - - - - -';
 		margin-right: 25px;
-		font-family: 'CaveatBrush-Regular', sans-serif;
+		/*font-family: CaveatBrush-Regular, serif;*/		/* PARA DESARROLLO */
+		font-family: 'Caveat Brush', cursive;			/* PARA PRODUCCIÓN */
 	}
 
 	.title-projects h3:after,
 	.title-form h3:after{
 		content: '- - - - - -';
 		margin-left: 25px;
-		font-family: 'CaveatBrush-Regular', sans-serif;
+		/*font-family: CaveatBrush-Regular, serif;*/		/* PARA DESARROLLO */
+		font-family: 'Caveat Brush', cursive;			/* PARA PRODUCCIÓN */
 	}
 
 	/*** FORM ***/
@@ -625,7 +655,8 @@ textarea:required:valid + label{
 
 	/*** HEADER ***/
 	.header{
-		background: url(https://i.imgur.com/iQGnIWq.jpg);
+		/*background: url('../image/fondo.jpg');*/			/* PARA DESARROLLO */
+		background: url(https://i.imgur.com/iQGnIWq.jpg);		/* PARA PRODUCCIÓN */
 		background-repeat: no-repeat;
 		background-size: 150% 100%;
 	}
@@ -635,7 +666,8 @@ textarea:required:valid + label{
 	
 	/*** HEADER ***/
 	.header{
-		background: url(https://i.imgur.com/iQGnIWq.jpg);
+		/*background: url('../image/fondo.jpg');*/			/* PARA DESARROLLO */
+		background: url(https://i.imgur.com/iQGnIWq.jpg);		/* PARA PRODUCCIÓN */
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 	}
@@ -689,7 +721,18 @@ textarea:required:valid + label{
 	}
 
 	/*** INFO ***/
+	.info{
+		padding: 60px 50px 40px 50px;
+		display: flex;
+		flex-direction: row;
+		margin-top: 2%;
+	}
+
 	.img-info{
+		margin-right: 6.5%;
+		margin-bottom: 0;
+		margin-top: 3%;
+		float: none;
 		margin-left: 6.5%;
 	}
 
@@ -720,4 +763,3 @@ textarea:required:valid + label{
 		width: 50%;
 	}
 }
-
