--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -287,7 +287,7 @@ body{ background: #000; }
 	padding-top: 75px;
 }
 
-card{
+.card{
 	font-family: Insaniburger, serif;
 	margin: 10px auto;
 	width: 100%;
@@ -452,10 +452,11 @@ card{
 	display: block;
 	color: #fff;
 	text-align: justify;
-	font-family: 'Helvetica', sans-serif;
+	font-family: CaveatBrush-Regular, serif;		/* PARA DESARROLLO */
+	/*font-family: 'Caveat Brush', cursive;*/		/* PARA PRODUCCIÓN */
 	max-width: 610px;
-	font-size: 1em;
-	padding: 10px;
+	font-size: 2em;
+	padding: 10px 20px;
 	margin: 40px auto 30px auto;
 }
 
@@ -700,7 +701,7 @@ textarea:required:valid + label{
 
 	/*** FORM ***/
 	.info-form p{
-		font-size: 1.1em;
+		font-size: 2.2em;
 		max-width: 710px;
 	}
 
