--- a/resources/css/style-mantto.css
+++ b/resources/css/style-mantto.css
@@ -135,7 +135,8 @@ div.img-mantto{
 	width: 100%;
 	height: 50%;
 	background-size: 100% 100%;
-	margin: 50px ;
+	margin: 50px;
+	margin-top: 10%;
 	border-radius: 5%;
 	box-shadow: 0 0 10px #fff;
 }
@@ -154,10 +155,6 @@ div.img-mantto{
 }
 
 @media (min-width: 768px){
-	div.content{
-		align-items: center;
-	}
-
 	div.img-mantto{
 		display: block;
 	}
